--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,7 +29,7 @@ h6 {
 }
 
 table {
-  /*   border-collapse: collapse; Remova essa tag para uma segunda configuração */ 
+ /*   border-collapse: collapse;  Ative ou remova essa tag para uma segunda configuração */ 
     margin-left: auto;
     margin-right: auto;
     border: 3px solid black;
@@ -44,7 +44,7 @@ table {
 th {
     text-align: left;
     padding: 2px;
-    background-color: #4CAF50;
+    background-color: rgb(0, 195, 255);
     color: white;
     font-size: 45px; /* altera o tamanho da fonte */
     color: blue; /* altera a cor da fonte */
