--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,11 +5,18 @@ h1 {
     color: blue; /* altera a cor da fonte */
 }
 
+h2 {
+    text-align: left;
+    font-family: "Copperplate", Copperplate Gothic Light, fantasy;
+    font-size: 40px;
+    color: rgb(0, 0, 0)
+}
+
 h3 {
     text-align: left;
     font-family: "Brush Script MT", Brush Script Std, cursive;
     font-weight: normal;
-    font-size: 28px;
+    font-size: 30px;
 }
 
 h4 {
@@ -20,12 +27,26 @@ h4 {
     font-style: italic;
 }
 
+h5 {
+    text-align: left;
+    font-weight: bold;
+    font-size: 26px;
+}
+
 h6 {
     text-align: left;
     font-family: "Arial Narrow", sans-serif;
-    font-weight: normal;
     font-weight: bold;
     font-size: 24px;
+}
+
+a {
+    font-style: italic;
+    color: rgb(54, 54, 54);
+}
+
+.center {
+    text-align: center
 }
 
 table {
@@ -39,6 +60,11 @@ table {
 .tab1 img{
     float: left;
     margin-right: 10px;
+}
+
+.img2 {
+    border: 3px solid rgb(0, 119, 255);
+    animation: mudar-cor3 3s infinite;
 }
 
 th {
@@ -56,10 +82,6 @@ tr {
 
 tr:nth-child(odd) {
     background-color: rgb(9, 214, 9);
-}
-
-.center {
-    text-align: center
 }
 
 /* Substitua a tag <marquee> com animação CSS */
@@ -81,8 +103,6 @@ tr:nth-child(odd) {
     animation-delay: 0s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
-    font-size: 40px;
-    color: #000000;
     text-align: center;
 }
 
@@ -157,9 +177,4 @@ dfn {
     border: 3px solid rgb(0, 0, 0);
     padding: 5px;
     background-color: rgb(0, 217, 255);
-}
-
-.img2 {
-    border: 3px solid rgb(0, 119, 255);
-    animation: mudar-cor3 3s infinite;
 }
