--- a/css/estilos.css
+++ b/css/estilos.css
@@ -174,7 +174,9 @@ tr:nth-child(odd) {
 }
 
 dfn {
-    border: 3px solid rgb(0, 0, 0);
-    padding: 5px;
-    background-color: rgb(0, 217, 255);
+    border: 1px solid rgb(0, 0, 0);
+    padding: 2px;
+    font-size: 43px;
+    background-color: rgba(0, 217, 255, 0.541);
+    color: rgb(94, 0, 73);
 }
